# prism

./: .gitignore  CMakeLists.txt  README.md
examples/: camera.js  plates.js  run_prism.sh  run_scene.sh  scene.js
src/prism/: CMakeLists.txt
src/prism/src/: prism.cpp  utils.cpp  utils.h
src/scene/: CMakeLists.txt
src/scene/src/: scene.cpp  utils.cpp  utils.h
